# r-stock-analyzer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.example.yaml
.github/: copilot-instructions.md
migrations/2025-07-31-000000_initial_setup/: down.sql  up.sql
specs/: all-requirement.md
src/: auth.rs  database.rs  environments.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs
src/handlers/: llm_provider.rs  mod.rs  user.rs
