[package]
name = "r-stock-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
diesel = { version = "2.2", features = [
  "postgres",
  "uuid",
  "chrono",
  "r2d2",
  "numeric",
] }
diesel_migrations = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
bigdecimal = { version = "0.4", features = ["serde"] }
